@@ -2,6 +2,8 @@ PZS-NG CHANGELOG
 ----------------
 
 v1.2.0  --> 1.2.x :
+		- Clean up mp3 tag info gathering
+		- Fix crashing zipscript when junk is present in the ID3-year tag and id3_year is used in the completebar (fixed by capone)
 		- Added socks5 proxy support for TVRage sitebot plugin (based on code by crx)
 		- Fix swapped arguments in dl_speedtest (fixed by rbt)
 		- Enhance AutoOp sitebot plugin to handle any availible IRC mode. Renamed to AutoIRCFlag.
